[gd_scene load_steps=4 format=3 uid="uid://dkau3gevf15ao"]

[ext_resource type="Script" path="res://scripts/battle_system_2.gd" id="1_3wixp"]
[ext_resource type="PackedScene" uid="uid://bwxim7a03270n" path="res://scenes/battle_menu.tscn" id="2_m4sbl"]
[ext_resource type="PackedScene" uid="uid://dklsry4omvh26" path="res://scenes/message_box.tscn" id="3_fvchu"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_3wixp")

[node name="Characters" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BattleMenu" parent="CanvasLayer" instance=ExtResource("2_m4sbl")]
unique_name_in_owner = true
metadata/_edit_use_anchors_ = true

[node name="MessageBox" parent="CanvasLayer" instance=ExtResource("3_fvchu")]
unique_name_in_owner = true

[connection signal="characters_selected" from="CanvasLayer/BattleMenu" to="." method="_on_targets_selected"]
[connection signal="spell_selected" from="CanvasLayer/BattleMenu" to="." method="_on_spell_selected"]
